<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_start_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_stop_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TimePicker
        android:id="@+id/timePicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_days_of_week"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/ToggleButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="-2dip"
            android:minWidth="48dp"
            android:textOff="@string/chrono_day_monday"
            android:textOn="@string/chrono_day_monday" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_marginLeft="-2dip"
    		android:layout_marginRight="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_tuesday"
            android:textOn="@string/chrono_day_tuesday" 
            android:minWidth="48dp"/>
        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_marginLeft="-2dip"
    		android:layout_marginRight="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_wednesday"
            android:textOn="@string/chrono_day_wednesday" 
            android:minWidth="48dp" />
        <ToggleButton
            android:id="@+id/toggleButton4"
            android:layout_marginLeft="-2dip"
    		android:layout_marginRight="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_thursday"
            android:textOn="@string/chrono_day_thursday" 
            android:minWidth="48dp"/>
        <ToggleButton
            android:id="@+id/toggleButton5"
            android:layout_marginLeft="-2dip"
    		android:layout_marginRight="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_friday"
            android:textOn="@string/chrono_day_friday" 
            android:minWidth="48dp"/>
        <ToggleButton
            android:id="@+id/toggleButton6"
            android:layout_marginLeft="-2dip"
    		android:layout_marginRight="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_saturday"
            android:textOn="@string/chrono_day_saturday" 
            android:minWidth="48dp"/>
        <ToggleButton
            android:id="@+id/toggleButton7"
            android:layout_marginLeft="-2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/chrono_day_sunday"
            android:textOn="@string/chrono_day_sunday" 
            android:minWidth="48dp" />

    </LinearLayout>

</LinearLayout>
